--- a/base/application-ci.yaml
+++ b/base/application-ci.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: management-all-config
+  name: management-all-config-ci
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -14,3 +14,5 @@ spec:
     path: ./ci/guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps
     targetRevision: HEAD
+    directory:
+      recurse: true
