--- a/base/application-il.yaml
+++ b/base/application-il.yaml
@@ -12,7 +12,7 @@ spec:
   project: default
   source:
     path: ./il/guestbook
-    repoURL: https://github.com/argoproj/argocd-example-apps
+    repoURL: https://github.com/huynhquochuy008/argocd_test.git
     targetRevision: HEAD
     directory:
       recurse: true
