--- a/ci/guestbook/application.yaml
+++ b/ci/guestbook/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: management-all-config-ci
+  name: management-all-config-sub-main-ci
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,7 +11,8 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: ./ci/guestbook/
+    path: ./guestbook
     repoURL: https://github.com/huynhquochuy008/argocd_test.git
     targetRevision: HEAD
-    
+    directory:
+      recurse: true
