--- a/ci/guestbook/application-chart.yaml
+++ b/ci/guestbook/application-chart.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    chart: sealed-secret
+    path: sealed-secret
     repoURL: https://github.com/huynhquochuy008/argocd_test.git
     targetRevision: "1"
     helm:
